--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-slick": "^0.30.3",
     "react-toggle-dark-mode": "^1.1.1",
+    "slick-carousel": "^1.8.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
