--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "aos": "^2.3.4",
     "gsap": "^3.12.5",
     "lucide-react": "^0.473.0",
     "next": "15.1.4",
